--- a/layanan.html
+++ b/layanan.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layanan UMKM - Izin.In</title>
 
-    <!-- Font Awesome & Google Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-
-    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              primary: "#2563eb",
-              secondary: "#1e293b",
+              primary: "#1d4ed8",
+              secondary: "#0f172a",
             },
           },
         },
@@ -176,80 +172,8 @@
     </style>
   </head>
   <body class="bg-gray-50">
-    <!-- Header -->
-    <header class="bg-white shadow-md sticky top-0 z-40">
-      <div class="container mx-auto px-2 md:px-4 py-2 md:py-3">
-        <div class="flex items-center justify-between">
-          <div class="flex items-center">
-            <div class="bg-primary text-white w-8 h-8 md:w-10 md:h-10 rounded-lg flex items-center justify-center">
-              <i class="fas fa-file-contract text-lg md:text-xl"></i>
-            </div>
-            <div class="ml-2 md:ml-3">
-              <h1 class="text-lg md:text-xl font-bold text-primary">Izin.In</h1>
-              <p class="text-xs text-gray-600">Solusi Perizinan UMKM</p>
-            </div>
-          </div>
-
-          <nav class="hidden md:flex space-x-4 lg:space-x-6">
-            <a href="/" class="nav-link font-medium text-sm lg:text-base">Beranda</a>
-            <a href="/tentang.html" class="nav-link text-sm lg:text-base">Tentang</a>
-            <a href="/layanan.html" class="nav-link text-sm lg:text-base">Layanan</a>
-            <a href="/berita.html" class="nav-link text-sm lg:text-base">Berita</a>
-            <a href="/pengaduan.html" class="nav-link text-sm lg:text-base">Pengaduan</a>
-            <a href="/kontak.html" class="nav-link text-sm lg:text-base">Kontak</a>
-          </nav>
-
-          <!-- Mobile menu button -->
-          <button id="mobile-menu-button" class="md:hidden hamburger-custom">
-            <span class="hamburger-bar"></span>
-            <span class="hamburger-bar"></span>
-            <span class="hamburger-bar"></span>
-          </button>
-        </div>
-      </div>
-      <!-- Mobile Menu -->
-      <div id="mobile-menu" class="mobile-menu md:hidden">
-        <div class="flex justify-between items-center border-b">
-          <div class="flex items-center"></div>
-          <button id="close-menu" class="hamburger-simple md:hidden">
-            <span class="hamburger-line"></span>
-            <span class="hamburger-line"></span>
-            <span class="hamburger-line"></span>
-          </button>
-        </div>
-        <nav class="p-4">
-          <div class="flex flex-col space-y-4 md:hidden">
-            <a href="/" class="nav-link text-lg font-medium">Beranda</a>
-            <a href="/tentang.html" class="nav-link text-lg">Tentang</a>
-            <a href="/layanan.html" class="nav-link text-lg">Layanan</a>
-            <a href="/berita.html" class="nav-link text-lg">Berita</a>
-            <a href="/pengaduan.html" class="nav-link text-lg">Pengaduan</a>
-            <a href="/kontak.html" class="nav-link text-lg">Kontak</a>
-          </div>
-        </nav>
-    <!-- Mobile Menu -->
-    <div id="mobile-menu" class="mobile-menu md:hidden">
-      <div class="flex justify-between items-center border-b">
-        <div class="flex items-center">
-        </div>
-        <button id="close-menu" class="hamburger-simple md:hidden">
-          <span class="hamburger-line"></span>
-          <span class="hamburger-line"></span>
-          <span class="hamburger-line"></span>
-        </button>
-      </div>
-      <nav id="mobile-nav" hidden class="p-4">
-        <div class="flex flex-col space-y-4 md:hidden">
-          <a href="/" class="nav-link text-lg font-medium">Beranda</a>
-          <a href="/tentang.html" class="nav-link text-lg">Tentang</a>
-          <a href="/layanan.html" class="nav-link text-lg">Layanan</a>
-          <a href="/berita.html" class="nav-link text-lg">Berita</a>
-          <a href="/pengaduan.html" class="nav-link text-lg">Pengaduan</a>
-          <a href="/kontak.html" class="nav-link text-lg">Kontak</a>
-        </div>
-      </nav>
-    </div>
-    </header>
+    <!-- Navbar -->
+    <div id="navbar-container"></div>
 
     <!-- Hero -->
     <!-- Hero Section Polos Biru -->
@@ -530,14 +454,14 @@
       </div>
     </footer>
 
-    <!-- Scripts -->
+    <script src="js/navbar.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
-        // Animate cards: delays are set with CSS var --delay already inline
-        const cards = Array.from(document.querySelectorAll(".service-card"));
+        // Service card accordion
+        const cards = document.querySelectorAll(".service-card");
+        const toggleButtons = document.querySelectorAll(".toggle-details");
 
-        // Toggle details for each card - accordion behavior
-        document.querySelectorAll(".toggle-details").forEach((btn) => {
+        toggleButtons.forEach((btn) => {
           btn.addEventListener("click", () => {
             const card = btn.closest(".service-card");
             const isCurrentlyActive = card.classList.contains("active");
@@ -566,9 +490,73 @@
           });
         });
 
-        // Mobile menu toggle
-        const mobileMenuButton = document.getElementById("mobileMenuButton");
-        const mobileMenu = document.getElementById("mobileMenu");
+        // Service search functionality
+        const searchInput = document.getElementById("serviceSearch");
+        const servicesContainer = document.getElementById("servicesContainer");
+        const serviceCards = Array.from(servicesContainer.querySelectorAll(".service-card"));
+
+        searchInput.addEventListener("input", (e) => {
+          const query = e.target.value.toLowerCase().trim();
+
+          serviceCards.forEach((card) => {
+            const title = card.querySelector("h3").textContent.toLowerCase();
+            const description = card.querySelector("p").textContent.toLowerCase();
+            const isVisible = title.includes(query) || description.includes(query);
+            card.style.display = isVisible ? "" : "none";
+          });
+        });
+      });
+    </script>
+  </body>
+</html>
+        const toggleButtons = document.querySelectorAll(".toggle-details");
+
+        toggleButtons.forEach((btn) => {
+          btn.addEventListener("click", () => {
+            const card = btn.closest(".service-card");
+            const isCurrentlyActive = card.classList.contains("active");
+
+            // Close all other cards first
+            cards.forEach((otherCard) => {
+              if (otherCard !== card) {
+                otherCard.classList.remove("active");
+                const otherBtn = otherCard.querySelector(".toggle-details");
+                const otherIcon = otherBtn.querySelector("i");
+                if (otherIcon) otherIcon.classList.remove("rotated");
+                otherBtn.setAttribute("aria-expanded", "false");
+              }
+            });
+
+            // Toggle current card
+            card.classList.toggle("active");
+
+            // toggle rotation of chevron icon
+            const icon = btn.querySelector("i");
+            if (icon) icon.classList.toggle("rotated");
+
+            // accessibility aria-expanded
+            const expanded = btn.getAttribute("aria-expanded") === "true";
+            btn.setAttribute("aria-expanded", String(!expanded));
+          });
+        });
+
+        // Service search functionality
+        const searchInput = document.getElementById("serviceSearch");
+        const servicesContainer = document.getElementById("servicesContainer");
+        const serviceCards = Array.from(servicesContainer.querySelectorAll(".service-card"));
+
+        searchInput.addEventListener("input", (e) => {
+          const query = e.target.value.toLowerCase().trim();
+
+          serviceCards.forEach((card) => {
+            const title = card.querySelector("h3").textContent.toLowerCase();
+            const description = card.querySelector("p").textContent.toLowerCase();
+            const isVisible = title.includes(query) || description.includes(query);
+            card.style.display = isVisible ? "" : "none";
+          });
+        });
+      });
+    </script>
         if (mobileMenuButton && mobileMenu) {
           mobileMenuButton.addEventListener("click", () => {
             mobileMenu.classList.toggle("hidden");
